changed onclick and added ID for eventlistener

--- a/Die Extension/popup.html
+++ b/Die Extension/popup.html
@@ -48,7 +48,7 @@ img
 <body>
 
 <p id="demo"><b>This is Dice display</b></p>
-    <button onclick="randomcard()"><b>Click to Roll dice</b></button>
+    <button id="click"><b>Click to Roll dice</b></button>
     <p id="sixshow"> </p>
     <img  id="die">
 
